[package]
name = "acctblty"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = { version = "0.10" }
serde = { version = "1" }
rand = { version = "0.8" }
aes = "0.8"
hmac = "0.12"
curve25519-dalek = { version = "4.1", features = [ "serde", "digest" ]}
ed25519-dalek = { version = "2.0", features = [ "batch", "digest", "serde" ]}
chrono = "0.4"
rand_chacha = "0.3"
postcard = "1.0"
heapless = "0.7"
flatbuffers = "23.5"

[dev-dependencies]
criterion = "0.5"

[build-dependencies]
flatc = "0.2"

[[bench]]
name = "benchmarks"
harness = false
