[package]
name = "acctblty"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
sha2 = { version = "0.10" }
serde = { version = "1" }
serde_json = { version = "1" }
rand = { version = "0.8" }
aes = "0.8"
cbc = "0.1"
hmac = "0.12"
curve25519-dalek = { version = "4.1", features = [ "serde", "digest" ]}
ed25519-dalek = { version = "2.0", features = [ "batch", "digest", "serde" ]}
chrono = "0.4"
rand_chacha = "0.3"
rand_distr = "0.4"
flatbuffers = "24.3"
lazy_static = "1.5"

[features]
mem_tests = []

[dev-dependencies]
criterion = "0.5"
memory_stats = "1.2"

[build-dependencies]
flatc = "0.2"

[[bench]]
name = "benchmarks"
harness = false

[workspace]
members = ["dynlib"]
