[package]
name = "sandi_int"
version = "0.1.0"
edition = "2021"
authors = [ "Radames Cruz Moreno <racruzmo@microsoft.com", "Kim Laine <kim.laine@microsoft.com>" ]
readme = "README.md"
license = "MIT"
repository = "https://GitHub.com/Microsoft/Sandi"
homepage = "https://GitHub.com/Microsoft/Sandi"
description = "C bindings for the Sandi library."
exclude = [
    "**/.gitignore",
    ".gitignore",
]

[lib]
crate-type = ["cdylib"]

[dependencies]
sandi = { path = ".." }
sha2 = { version = "0.10" }
hmac = "0.12"
rand = { version = "0.8" }
curve25519-dalek = { version = "4.1", features = [ "serde", "digest" ]}
